--- a/index.html
+++ b/index.html
@@ -111,6 +111,28 @@
             width: 100%;
         }
 
+        /* Mobile Menu Toggle */
+        .mobile-menu-toggle {
+            display: none;
+            background: none;
+            border: none;
+            color: var(--text-color);
+            font-size: 1.5rem;
+            cursor: pointer;
+            padding: 0.5rem;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            border-radius: 8px;
+        }
+
+        .mobile-menu-toggle:hover {
+            color: var(--accent-color);
+            background: rgba(255, 255, 255, 0.1);
+        }
+
+        .mobile-menu-toggle i {
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
         /* Hero Section - Full Width with Better Layout */
         .hero {
             min-height: 100vh;
@@ -119,6 +141,7 @@
             background: linear-gradient(135deg, var(--light-gray) 0%, #ffffff 100%);
             position: relative;
             overflow: hidden;
+            padding-top: 80px; /* Add padding for fixed navbar */
         }
 
         .hero-container {
@@ -136,7 +159,7 @@
         }
 
         .hero-content {
-            max-width: 500px;
+            max-width: 100%;
         }
 
         .hero-badge {
@@ -478,14 +501,78 @@
 
         /* Mobile Responsive */
         @media (max-width: 768px) {
+            .mobile-menu-toggle {
+                display: block;
+            }
+
             .nav-links {
-                display: none;
+                position: fixed;
+                top: 82px;
+                left: 0;
+                width: 100%;
+                background: var(--primary-color);
+                flex-direction: column;
+                padding: 0;
+                gap: 0;
+                max-height: 0;
+                overflow: hidden;
+                transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+                box-shadow: 0 8px 32px rgba(0,0,0,0.15);
+                border-top: 1px solid rgba(255,255,255,0.1);
+            }
+
+            .nav-links.active {
+                max-height: 400px;
+                padding: 1rem 0;
+            }
+
+            .nav-links li {
+                text-align: center;
+                opacity: 0;
+                transform: translateY(-20px);
+                transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            }
+
+            .nav-links.active li {
+                opacity: 1;
+                transform: translateY(0);
+            }
+
+            .nav-links.active li:nth-child(1) { transition-delay: 0.1s; }
+            .nav-links.active li:nth-child(2) { transition-delay: 0.15s; }
+            .nav-links.active li:nth-child(3) { transition-delay: 0.2s; }
+            .nav-links.active li:nth-child(4) { transition-delay: 0.25s; }
+
+            .nav-links a {
+                display: block;
+                padding: 1rem 2rem;
+                font-size: 1.1rem;
+                border-bottom: 1px solid rgba(255,255,255,0.1);
+                transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            }
+
+            .nav-links a:hover {
+                background: rgba(255,255,255,0.1);
+                padding-left: 2.5rem;
+            }
+
+            .nav-links li:last-child a {
+                border-bottom: none;
+            }
+
+            /* Fixed mobile hero section */
+            .hero {
+                min-height: 100vh;
+                padding-top: 120px; /* Increased padding for mobile */
+                padding-bottom: 2rem;
             }
 
             .hero-container {
                 grid-template-columns: 1fr;
                 gap: 3rem;
                 text-align: center;
+                margin: 0 1rem; /* Add side margins */
+                padding: 2rem 1.5rem; /* Adjust padding */
             }
 
             .company-name {
@@ -495,6 +582,7 @@
             .cta-buttons {
                 flex-direction: column;
                 align-items: center;
+                gap: 1rem;
             }
 
             .hero-image img {
@@ -516,6 +604,15 @@
         }
 
         @media (max-width: 480px) {
+            .hero {
+                padding-top: 140px; /* Even more padding for smaller screens */
+            }
+
+            .hero-container {
+                margin: 0 0.5rem;
+                padding: 1.5rem 1rem;
+            }
+
             .company-name {
                 font-size: 2rem;
             }
@@ -540,6 +637,9 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contacts.html">Contact</a></li>
             </ul>
+            <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
     </nav>
 
@@ -577,10 +677,6 @@
             <div class="stat-item">
                 <h3>10+</h3>
                 <p>Years Experience</p>
-            </div>
-            <div class="stat-item">
-                <h3>100%</h3>
-                <p>Insured & Certified</p>
             </div>
         </div>
     </section>
@@ -697,6 +793,47 @@
     </footer>
 
     <script>
+        // Mobile menu toggle functionality with smooth animations
+        const mobileMenuToggle = document.querySelector('.mobile-menu-toggle');
+        const navLinks = document.querySelector('.nav-links');
+        const menuIcon = mobileMenuToggle.querySelector('i');
+
+        mobileMenuToggle.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+            
+            // Toggle icon between bars and times with rotation
+            if (navLinks.classList.contains('active')) {
+                menuIcon.classList.remove('fa-bars');
+                menuIcon.classList.add('fa-times');
+                menuIcon.style.transform = 'rotate(180deg)';
+            } else {
+                menuIcon.classList.remove('fa-times');
+                menuIcon.classList.add('fa-bars');
+                menuIcon.style.transform = 'rotate(0deg)';
+            }
+        });
+
+        // Close mobile menu when clicking on a link
+        navLinks.addEventListener('click', (e) => {
+            if (e.target.tagName === 'A') {
+                navLinks.classList.remove('active');
+                menuIcon.classList.remove('fa-times');
+                menuIcon.classList.add('fa-bars');
+                menuIcon.style.transform = 'rotate(0deg)';
+            }
+        });
+
+        // Close mobile menu when clicking outside
+        document.addEventListener('click', (e) => {
+            if (!e.target.closest('nav')) {
+                navLinks.classList.remove('active');
+                menuIcon.classList.remove('fa-times');
+                menuIcon.classList.add('fa-bars');
+                menuIcon.style.transform = 'rotate(0deg)';
+            }
+        });
+
+        // Smooth scrolling for anchor links
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
@@ -709,7 +846,6 @@
                 }
             });
         });
-
     </script>
 </body>
 </html>
