updated contact info

--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:michaudsmallenginerepair@outlook.com">michaudsmallenginerepair@outlook.com</a>
+                            <a href="mailto:stellartmanagement@outlook.com">stellartmanagement@outlook.com</a>
                         </div>
                     </div>
                 </div>
