--- a/contacts.html
+++ b/contacts.html
@@ -706,8 +706,8 @@
               <i class="fas fa-envelope"></i>
             </div>
             <div class="contact-text">
-              <a href="mailto:michaudsmallenginerepair@outlook.com"
-                >michaudsmallenginerepair@outlook.com</a
+              <a href="mailto:stellartmanagement@outlook.com"
+                >stellartmanagement@outlook.com</a
               >
             </div>
           </div>
@@ -853,7 +853,7 @@
             </div>
             <div class="footer-contact-item">
               <i class="fas fa-envelope"></i>
-              <a href="mailto:michaudsmallenginerepair@outlook.com">michaudsmallenginerepair@outlook.com</a>
+              <a href="mailto:stellartmanagement@outlook.com">stellartmanagement@outlook.com</a>
             </div>
           </div>
         </div>
