--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
             
             <!-- FormSubmit integration -->
             <form action="https://formsubmit.co/3c74fa73e0e8a8d447ade6228b411883" method="POST" class="contact-form">
-
+                <input type="hidden" name="_next" value="https://enderesk.github.io/stellartreemanagement/index.html">
                 <div class="form-group">
                     <input type="text" name="name" placeholder="Your Name" class="form-input" required>
                     <input type="email" name="email" placeholder="Your Email" class="form-input" required>
@@ -793,7 +793,6 @@
     </footer>
 
     <script>
-        // Mobile menu toggle functionality with smooth animations
         const mobileMenuToggle = document.querySelector('.mobile-menu-toggle');
         const navLinks = document.querySelector('.nav-links');
         const menuIcon = mobileMenuToggle.querySelector('i');
