--- a/about.html
+++ b/about.html
@@ -538,7 +538,7 @@
         <div class="nav-container">
             <img src="images/logo.png" alt="Stellar Tree Management Logo" class="logo">
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="./">Home</a></li>
                 <li><a href="about.html" class="active">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contacts.html">Contact</a></li>
