--- a/contacts.html
+++ b/contacts.html
@@ -656,7 +656,7 @@
         class="logo"
       />
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="./">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contacts.html" class="active">Contact</a></li>
