--- a/projects.html
+++ b/projects.html
@@ -657,7 +657,7 @@
         <div class="nav-container">
             <img src="images/logo.png" alt="Stellar Tree Management Logo" class="logo">
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="./">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html" class="active">Projects</a></li>
                 <li><a href="contacts.html">Contact</a></li>
