--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
             <div class="section-header">
                 <h2 class="section-title">Get In Touch</h2>
                 <p class="section-subtitle">
-                    Need a tree removed or trimmed?? Contact us today for expert service in Calgary and surrounding areas.
+                    Need a tree removed or trimmed? Contact us today for expert service in Calgary and surrounding areas.
                 </p>
             </div>
             
