clean up in projects page and domain
cleaned up the projects page so its has a more intuitive ui with projects.json being fetched and being more dynamic, cleaned up the posts so that they are now tags. then domain is cleaner without showing the .html

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us - Stellar Tree Management</title>
-  <link rel="icon" type="image/png" href="images/logo.png" />
+  <link rel="icon" type="image/png" href="../images/logo.png" />
   <link
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     rel="stylesheet"
@@ -651,15 +651,15 @@
   <nav>
     <div class="nav-container">
       <img
-        src="images/logo.png"
+        src="../images/logo.png"
         alt="Stellar Tree Management Logo"
         class="logo"
       />
       <ul class="nav-links">
-        <li><a href="./">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contacts.html" class="active">Contact</a></li>
+        <li><a href="../">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/projects">Projects</a></li>
+        <li><a href="/contacts" class="active">Contact</a></li>
       </ul>
       <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
         <i class="fas fa-bars"></i>
