--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Stellar Tree Management</title>
-    <link rel="icon" type="image/png" href="images/logo.png">
+    <link rel="icon" type="image/png" href="../images/logo.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -536,12 +536,12 @@
 <body>
     <nav>
         <div class="nav-container">
-            <img src="images/logo.png" alt="Stellar Tree Management Logo" class="logo">
+            <img src="../images/logo.png" alt="Stellar Tree Management Logo" class="logo">
             <ul class="nav-links">
-                <li><a href="./">Home</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contacts.html">Contact</a></li>
+                <li><a href="../">Home</a></li>
+                <li><a href="/about" class="active">About</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/contacts">Contact</a></li>
             </ul>
             <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
                 <i class="fas fa-bars"></i>
@@ -579,7 +579,7 @@
                 </p>
             </div>
             <div class="about-image">
-                <img src="images/about-background.jpg" alt="Professional tree care team at work">
+                <img src="../images/about-background.jpg" alt="Professional tree care team at work">
             </div>
         </div>
     </section>
