--- a/index.html
+++ b/index.html
@@ -633,9 +633,9 @@
             <img src="images/logo.png" alt="Stellar Tree Management Logo" class="logo">
             <ul class="nav-links">
                 <li><a href="./" class="active">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contacts.html">Contact</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/contacts">Contact</a></li>
             </ul>
             <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
                 <i class="fas fa-bars"></i>
