Initial commit with PostgreSQL setup

--- a/index.html
+++ b/index.html
@@ -10,668 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
         rel="stylesheet">
-    <style>
-        :root {
-            --primary-color: #2a2a2a;
-            --accent-color: #8cc63f;
-            --secondary-color: #5a5a5a;
-            --bg-color: #f8f9fa;
-            --text-color: #ffffff;
-            --light-gray: #f8fafc;
-            --border-color: #e5e7eb;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            line-height: 1.6;
-            font-family: 'Inter', sans-serif;
-            overflow-x: hidden;
-        }
-
-        /* Modern Navigation */
-        nav {
-            background: #2a2a2a;
-            backdrop-filter: blur(20px);
-            padding: 1rem 0;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-            transition: all 0.3s ease;
-        }
-
-        .nav-links a.active {
-            color: var(--accent-color);
-        }
-
-        .nav-links a.active::after {
-            width: 100%;
-        }
-
-        .nav-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 2rem;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .logo {
-            height: 50px;
-            width: 50px;
-            border-radius: 50%;
-            background-color: #404040d9;
-            padding: 8px;
-            object-fit: cover;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 2rem;
-            list-style: none;
-        }
-
-        .nav-links a {
-            color: var(--text-color);
-            text-decoration: none;
-            font-weight: 500;
-            font-size: 0.95rem;
-            transition: color 0.3s ease;
-            position: relative;
-        }
-
-        .nav-links a:hover {
-            color: var(--accent-color);
-        }
-
-        .nav-links a::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            bottom: -5px;
-            left: 0;
-            background-color: var(--accent-color);
-            transition: width 0.3s ease;
-        }
-
-        .nav-links a:hover::after {
-            width: 100%;
-        }
-
-        /* Mobile Menu Toggle */
-        .mobile-menu-toggle {
-            display: none;
-            background: none;
-            border: none;
-            color: var(--text-color);
-            font-size: 1.5rem;
-            cursor: pointer;
-            padding: 0.5rem;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            border-radius: 8px;
-        }
-
-        .mobile-menu-toggle:hover {
-            color: var(--accent-color);
-            background: rgba(255, 255, 255, 0.1);
-        }
-
-        .mobile-menu-toggle i {
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        /* Hero Section - Full Width with Better Layout */
-        .hero {
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            background: linear-gradient(135deg, var(--light-gray) 0%, #ffffff 100%);
-            position: relative;
-            overflow: hidden;
-            padding-top: 80px;
-            /* Add padding for fixed navbar */
-        }
-
-        .hero-container {
-            max-width: 1300px;
-            margin: 0 auto;
-            padding: 2rem;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 4rem;
-            align-items: center;
-            background: var(--primary-color);
-            border-radius: 20px;
-            border: 2px solid var(--border-color);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
-        }
-
-        .hero-content {
-            max-width: 100%;
-        }
-
-        .hero-badge {
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-            background: var(--accent-color);
-            color: white;
-            padding: 0.5rem 1rem;
-            border-radius: 50px;
-            font-size: 0.875rem;
-            font-weight: 500;
-            margin-bottom: 1.5rem;
-        }
-
-        .company-name {
-            font-family: 'Poppins', sans-serif;
-            font-size: 3.5rem;
-            line-height: 1.2;
-            color: var(--text-color);
-            margin-bottom: 1.5rem;
-            font-weight: 700;
-        }
-
-        .company-description {
-            font-size: 1.2rem;
-            color: var(--text-color);
-            margin-bottom: 2rem;
-            line-height: 1.7;
-        }
-
-        .cta-buttons {
-            display: flex;
-            gap: 1rem;
-            margin-bottom: 2rem;
-        }
-
-        .btn-primary {
-            background: var(--accent-color);
-            color: white;
-            padding: 1rem 2rem;
-            border: none;
-            border-radius: 12px;
-            font-weight: 600;
-            text-decoration: none;
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
-
-        /* Updated hover to match contacts page */
-        .btn-primary:hover {
-            background: #7ab832;
-            transform: translateY(-1px);
-            box-shadow: 0 8px 20px rgba(140, 198, 63, 0.3);
-        }
-
-        .btn-secondary {
-            background: transparent;
-            color: var(--text-color);
-            padding: 1rem 2rem;
-            border: 2px solid var(--border-color);
-            border-radius: 12px;
-            font-weight: 600;
-            text-decoration: none;
-            transition: all 0.3s ease;
-        }
-
-        .btn-secondary:hover {
-            border-color: var(--accent-color);
-            color: var(--accent-color);
-        }
-
-        .hero-image {
-            position: relative;
-        }
-
-        .hero-image img {
-            width: 100%;
-            height: 500px;
-            object-fit: cover;
-            border-radius: 20px;
-            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
-        }
-
-        /* Stats Section */
-        .stats {
-            background: var(--primary-color);
-            color: white;
-            padding: 4rem 0;
-        }
-
-        .stats-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 2rem;
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 3rem;
-            text-align: center;
-        }
-
-        .stat-item h3 {
-            font-size: 2.5rem;
-            font-weight: 700;
-            color: var(--accent-color);
-            margin-bottom: 0.5rem;
-        }
-
-        .stat-item p {
-            color: rgba(255, 255, 255, 0.8);
-            font-weight: 500;
-        }
-
-        /* Services Section - Better Cards */
-        .services-section {
-            padding: 6rem 0;
-            background: var(--light-gray);
-        }
-
-        .services-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 2rem;
-        }
-
-        .section-header {
-            text-align: center;
-            margin-bottom: 4rem;
-        }
-
-        .section-title {
-            font-family: 'Poppins', sans-serif;
-            font-size: 2.5rem;
-            font-weight: 700;
-            color: var(--primary-color);
-            margin-bottom: 1rem;
-        }
-
-        .section-subtitle {
-            font-size: 1.2rem;
-            color: var(--secondary-color);
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        .services {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-        }
-
-        .service-card {
-            background: white;
-            padding: 2.5rem;
-            border-radius: 16px;
-            transition: all 0.3s ease;
-            border: 1px solid var(--border-color);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .service-card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 4px;
-            background: var(--accent-color);
-        }
-
-        .service-card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-        }
-
-        .service-icon {
-            width: 60px;
-            height: 60px;
-            background: var(--accent-color);
-            border-radius: 12px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-        }
-
-        .service-card h3 {
-            font-family: 'Poppins', sans-serif;
-            color: var(--primary-color);
-            margin-bottom: 1rem;
-            font-size: 1.5rem;
-            font-weight: 600;
-        }
-
-        .service-card p {
-            color: var(--secondary-color);
-            line-height: 1.7;
-        }
-
-        /* Contact Section */
-        .contact-section {
-            padding: 6rem 0;
-            background: white;
-        }
-
-        .contact-container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 0 2rem;
-            text-align: center;
-        }
-
-        .contact-form {
-            display: grid;
-            gap: 1.5rem;
-            margin-top: 3rem;
-        }
-
-        .form-group {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 1.5rem;
-        }
-
-        .form-input {
-            width: 100%;
-            padding: 1rem 1.5rem;
-            border: 2px solid var(--border-color);
-            border-radius: 12px;
-            background: white;
-            font-size: 1rem;
-            font-family: 'Inter', sans-serif;
-            transition: all 0.3s ease;
-        }
-
-        .form-input:focus {
-            outline: none;
-            border-color: var(--accent-color);
-            box-shadow: 0 0 0 3px rgba(140, 198, 63, 0.1);
-        }
-
-        .form-textarea {
-            grid-column: 1 / -1;
-            min-height: 120px;
-            resize: vertical;
-        }
-
-        /* Footer */
-        footer {
-            background: var(--primary-color);
-            color: white;
-            padding: 3rem 0 2rem;
-        }
-
-        .footer-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 2rem;
-        }
-
-        .footer-content {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 3rem;
-            margin-bottom: 2rem;
-        }
-
-        .footer-info h3 {
-            color: var(--accent-color);
-            margin-bottom: 1rem;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        .contact-info {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        .contact-item {
-            display: flex;
-            align-items: center;
-            gap: 0.75rem;
-            color: rgba(255, 255, 255, 0.8);
-        }
-
-        .contact-item i {
-            color: var(--accent-color);
-            width: 20px;
-        }
-
-        .contact-item a {
-            color: rgba(255, 255, 255, 0.8);
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .contact-item a:hover {
-            color: var(--accent-color);
-        }
-
-        .social-links {
-            display: flex;
-            gap: 1rem;
-            margin-top: 1rem;
-        }
-
-        .social-icon {
-            width: 40px;
-            height: 40px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            text-decoration: none;
-            transition: all 0.3s ease;
-        }
-
-        /* Make social icon hover consistent with contacts page */
-        .social-icon:hover {
-            background: var(--accent-color);
-            transform: translateY(-1px);
-        }
-
-        .notification {
-            position: fixed;
-            top: 100px;
-            right: 20px;
-            background: var(--primary-color);
-            color: white;
-            padding: 0.75rem 1rem;
-            /* Reduced padding slightly */
-            border-radius: 10px;
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
-            border-left: 4px solid var(--accent-color);
-            font-size: 0.85rem;
-            font-weight: 500;
-            z-index: 1100;
-            transform: translateX(350px);
-            opacity: 0;
-            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            max-width: 250px;
-            /* Reduced max width */
-        }
-
-        .notification.show {
-            transform: translateX(0);
-            opacity: 1;
-        }
-
-        .notification i {
-            color: var(--accent-color);
-            font-size: 1rem;
-        }
-
-        .footer-bottom {
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            padding-top: 2rem;
-            text-align: center;
-            color: rgba(255, 255, 255, 0.6);
-        }
-
-        /* Mobile Responsive */
-        @media (max-width: 768px) {
-            .mobile-menu-toggle {
-                display: block;
-            }
-
-            .nav-links {
-                position: fixed;
-                top: 82px;
-                left: 0;
-                width: 100%;
-                background: var(--primary-color);
-                flex-direction: column;
-                padding: 0;
-                gap: 0;
-                max-height: 0;
-                overflow: hidden;
-                transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-                box-shadow: 0 8px 32px rgba(0, 0, 0, 0.15);
-                border-top: 1px solid rgba(255, 255, 255, 0.1);
-            }
-
-            .nav-links.active {
-                max-height: 400px;
-                padding: 1rem 0;
-            }
-
-            .nav-links li {
-                text-align: center;
-                opacity: 0;
-                transform: translateY(-20px);
-                transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            }
-
-            .nav-links.active li {
-                opacity: 1;
-                transform: translateY(0);
-            }
-
-            .nav-links.active li:nth-child(1) {
-                transition-delay: 0.1s;
-            }
-
-            .nav-links.active li:nth-child(2) {
-                transition-delay: 0.15s;
-            }
-
-            .nav-links.active li:nth-child(3) {
-                transition-delay: 0.2s;
-            }
-
-            .nav-links.active li:nth-child(4) {
-                transition-delay: 0.25s;
-            }
-
-            .nav-links a {
-                display: block;
-                padding: 1rem 2rem;
-                font-size: 1.1rem;
-                border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-                transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            }
-
-            .nav-links a:hover {
-                background: rgba(255, 255, 255, 0.1);
-                padding-left: 2.5rem;
-            }
-
-            .nav-links li:last-child a {
-                border-bottom: none;
-            }
-
-            /* Fixed mobile hero section */
-            .hero {
-                min-height: 100vh;
-                padding-top: 120px;
-                /* Increased padding for mobile */
-                padding-bottom: 2rem;
-            }
-
-            .hero-container {
-                grid-template-columns: 1fr;
-                gap: 3rem;
-                text-align: center;
-                margin: 0 1rem;
-                /* Add side margins */
-                padding: 2rem 1.5rem;
-                /* Adjust padding */
-            }
-
-            .company-name {
-                font-size: 2.5rem;
-            }
-
-            .cta-buttons {
-                flex-direction: column;
-                align-items: center;
-                gap: 1rem;
-            }
-
-            .hero-image img {
-                height: 300px;
-            }
-
-            .stats-container {
-                grid-template-columns: repeat(2, 1fr);
-                gap: 2rem;
-            }
-
-            .form-group {
-                grid-template-columns: 1fr;
-            }
-
-            .section-title {
-                font-size: 2rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .hero {
-                padding-top: 140px;
-                /* Even more padding for smaller screens */
-            }
-
-            .hero-container {
-                margin: 0 0.5rem;
-                padding: 1.5rem 1rem;
-            }
-
-            .company-name {
-                font-size: 2rem;
-            }
-
-            .stats-container {
-                grid-template-columns: 1fr;
-            }
-
-            .services {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -683,6 +22,7 @@
                 <li><a href="/about">About</a></li>
                 <li><a href="/projects">Projects</a></li>
                 <li><a href="/contacts">Contact</a></li>
+                <li><a href="/booking/">Book Now</a></li>
             </ul>
             <button class="mobile-menu-toggle" aria-label="Toggle mobile menu">
                 <i class="fas fa-bars"></i>
@@ -703,9 +43,9 @@
                     pruning and stump grinding, we keep your property safe, clean, and beautiful.
                 </p>
                 <div class="cta-buttons">
-                    <a href="#contact" class="btn-primary">
-                        <i class="fas fa-phone"></i>
-                        Get Free Quote
+                    <a href="/booking/" class="btn-primary">
+                        <i class="fas fa-calendar-check"></i>
+                        Book Appointment
                     </a>
                     <a href="#services" class="btn-secondary">View Services</a>
                 </div>
